--- a/flutter_demo360/pubspec.yaml
+++ b/flutter_demo360/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_custom_tabs: 1.0.4
   video_360: ^0.0.3
   video_player_360: ^0.1.5
+  video_player_extra: ^2.2.11+4
 
 dev_dependencies:
   flutter_test:
